--- a/config/cable.yml
+++ b/config/cable.yml
@@ -5,6 +5,4 @@ test:
   adapter: test
 
 production:
-  adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") { "redis://ios-car-f8bf78f8eb62.herokuapp.com:6379/1" } %>
-  channel_prefix: ios_car_inspection_web_production
+  adapter: async
