--- a/config/cable.yml
+++ b/config/cable.yml
@@ -5,4 +5,6 @@ test:
   adapter: test
 
 production:
-  adapter: async
+  adapter: redis
+  url: redis://localhost:6379/1
+  channel_prefix: ios_car_inspection_web_production
