--- a/config/cable.yml
+++ b/config/cable.yml
@@ -6,5 +6,5 @@ test:
 
 production:
   adapter: redis
-  url: <%= ENV['REDIS_URL'] %>
+  url: redis://default:if9VgN3WaaigkfiSkXPgRX61sIcIA5qI@redis-15830.c256.us-east-1-2.ec2.redns.redis-cloud.com:15830
   channel_prefix: ios_car_inspection_web_production
